--- a/1. Introduction to Numpy.ipynb
+++ b/1. Introduction to Numpy.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,19 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Zeros Matris of shape (3, 5) is \n",
+      "Zeros Matrix of shape (3, 5) is \n",
       "[[0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]]\n",
       "\n",
-      "Ones Matris of shape (2, 3) is \n",
+      "Ones Matrix of shape (2, 3) is \n",
       "[[1. 1. 1.]\n",
       " [1. 1. 1.]]\n",
       "\n"
@@ -175,9 +175,9 @@
    ],
    "source": [
     "mat_zeros = np.zeros(shape=(3,5))\n",
-    "print ('Zeros Matris of shape %s is \\n%s\\n'%(mat_zeros.shape,mat_zeros))\n",
+    "print ('Zeros Matrix of shape %s is \\n%s\\n'%(mat_zeros.shape,mat_zeros))\n",
     "mat_ones = np.ones(shape=(2,3))\n",
-    "print ('Ones Matris of shape %s is \\n%s\\n'%(mat_ones.shape,mat_ones))\n"
+    "print ('Ones Matrix of shape %s is \\n%s\\n'%(mat_ones.shape,mat_ones))\n"
    ]
   },
   {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,25 +200,26 @@
      "output_type": "stream",
      "text": [
       "matrix generated from numpy.random.random is \n",
-      "[[0.40809381 0.92255528 0.26384768 0.18020434]\n",
-      " [0.78683826 0.51616332 0.20181108 0.44676456]\n",
-      " [0.40513581 0.41943719 0.14935848 0.49202397]]\n",
+      "[[0.80519867 0.32425443 0.98845961 0.08944572]\n",
+      " [0.67820734 0.00810088 0.19960064 0.24688621]\n",
+      " [0.71788733 0.88334724 0.04608541 0.87154979]]\n",
       "\n",
       "matrix generated from numpy.random.random is \n",
       "[[1 0 1 0]\n",
-      " [0 1 1 1]\n",
-      " [0 1 1 0]]\n",
+      " [0 0 0 0]\n",
+      " [0 0 1 1]]\n",
       "\n",
       "matrix generated from numpy.random.randn is \n",
-      "[[ 1.23093258  0.06762907  1.32948035  1.27069921]\n",
-      " [-1.55068329 -0.48071094  0.85203508 -1.90068409]\n",
-      " [-1.94335643  0.12680395  0.06573786 -0.66923407]]\n",
+      "[[ 1.05245228 -0.72012492 -0.02187322  3.43017336]\n",
+      " [ 2.37000562 -0.56784136 -0.45808054 -1.04767914]\n",
+      " [-0.24131457 -1.07591559 -2.32091026  1.11904428]]\n",
       "\n"
      ]
     }
    ],
    "source": [
     "#Using numpy.random.random\n",
+    "%timeit\n",
     "mat1 = np.random.random(size=(3,4))\n",
     "print ('matrix generated from numpy.random.random is \\n%s\\n'%mat1)\n",
     "mat2 = np.random.randint(low=0,high=2,size=(3,4))\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,18 +410,18 @@
      "output_type": "stream",
      "text": [
       "Original Matrix is \n",
-      "[[1 2 0 0 2]\n",
-      " [4 1 5 3 2]\n",
-      " [2 1 3 5 0]]\n",
+      "[[2 3 1 2 5]\n",
+      " [0 2 3 3 2]\n",
+      " [3 5 2 1 1]]\n",
       "\n",
       "Sub Matrix with first 2 rows and last 2 columns is \n",
-      "[[0 2]\n",
+      "[[2 5]\n",
       " [3 2]]\n",
       "\n",
       "After flipping the columns of the matrix, it looks : \n",
-      "[[0 0 2]\n",
-      " [3 5 1]\n",
-      " [5 3 1]]\n",
+      "[[2 1 3]\n",
+      " [3 3 2]\n",
+      " [1 2 5]]\n",
       "\n"
      ]
     }
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,24 +458,24 @@
      "output_type": "stream",
      "text": [
       "Original matrix of shape (3, 7), is \n",
-      "[[5 4 1 2 1 5 2]\n",
-      " [1 5 5 5 0 5 3]\n",
-      " [2 0 1 5 4 4 4]]\n",
+      "[[5 0 3 4 5 5 0]\n",
+      " [0 2 4 0 5 3 1]\n",
+      " [4 2 1 2 0 3 1]]\n",
       "\n",
       "First split of shape (3, 4), is \n",
-      "[[5 4 1 2]\n",
-      " [1 5 5 5]\n",
-      " [2 0 1 5]]\n",
+      "[[5 0 3 4]\n",
+      " [0 2 4 0]\n",
+      " [4 2 1 2]]\n",
       "\n",
       "Second split of shape (3, 2), is \n",
-      "[[1 5]\n",
-      " [0 5]\n",
-      " [4 4]]\n",
+      "[[5 5]\n",
+      " [5 3]\n",
+      " [0 3]]\n",
       "\n",
       "Third split of shape (3, 1), is \n",
-      "[[2]\n",
-      " [3]\n",
-      " [4]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [1]]\n",
       "\n"
      ]
     }
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -508,16 +509,16 @@
      "output_type": "stream",
      "text": [
       "Original matrix of shape (3, 7), is \n",
-      "[[5 2 1 1 0 5 5]\n",
-      " [5 3 0 1 5 2 1]\n",
-      " [5 5 4 2 2 1 0]]\n",
+      "[[4 5 4 2 4 3 1]\n",
+      " [3 3 3 4 3 2 1]\n",
+      " [4 3 3 2 2 5 4]]\n",
       "\n",
       "First split of shape (1, 7), is \n",
-      "[[5 2 1 1 0 5 5]]\n",
+      "[[4 5 4 2 4 3 1]]\n",
       "\n",
       "Second split of shape (2, 7), is \n",
-      "[[5 3 0 1 5 2 1]\n",
-      " [5 5 4 2 2 1 0]]\n",
+      "[[3 3 3 4 3 2 1]\n",
+      " [4 3 3 2 2 5 4]]\n",
       "\n"
      ]
     }
@@ -541,6 +542,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1]\n",
+      " [0 0 0]]\n",
+      "[[5 7 7 2 4]\n",
+      " [8 5 8 4 3]\n",
+      " [0 7 0 2 7]]\n",
+      "sum : 156\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "binary = np.random.randint(0, 2, (2, 3))\n",
+    "print(binary)\n",
+    "\n",
+    "# 2\n",
+    "matrix = np.random.randint(low=0, high=10, size=(3, 5))\n",
+    "print(matrix)\n",
+    "\n",
+    "sum = 0\n",
+    "for i in range(matrix.shape[0]-1):\n",
+    "    for j in range(matrix.shape[1]-1):\n",
+    "        sum += np.sum(matrix[i:i+2, j:j+2])\n",
+    "print(f\"sum : {sum}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -551,16 +586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memory Location of mat1[0] is : 2041724279440\n",
+      "Memory Location of mat1[0] is : 2409955659360\n",
       "\n",
-      "Memory Location of mat1[1] is : 2041724279464\n",
+      "Memory Location of mat1[1] is : 2409955659384\n",
       "\n",
       "Difference in Memory Location for 3 elements  is : 24 bytes\n",
       "\n",
@@ -587,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -688,37 +723,37 @@
      "output_type": "stream",
      "text": [
       "mat is \n",
-      "[[1 1 2 1 4]\n",
-      " [4 2 1 3 5]\n",
-      " [3 1 1 2 5]]\n",
+      "[[2 4 3 1 5]\n",
+      " [2 5 2 0 0]\n",
+      " [2 1 5 2 2]]\n",
       "\n",
       "v is \n",
       "[10 20 30 40 50]\n",
       "\n",
       "mat+1 is \n",
-      "[[2 2 3 2 5]\n",
-      " [5 3 2 4 6]\n",
-      " [4 2 2 3 6]]\n",
+      "[[3 5 4 2 6]\n",
+      " [3 6 3 1 1]\n",
+      " [3 2 6 3 3]]\n",
       "\n",
       "mat+v is \n",
-      "[[11 21 32 41 54]\n",
-      " [14 22 31 43 55]\n",
-      " [13 21 31 42 55]]\n",
+      "[[12 24 33 41 55]\n",
+      " [12 25 32 40 50]\n",
+      " [12 21 35 42 52]]\n",
       "\n",
       "mat*v is \n",
-      "[[ 10  20  60  40 200]\n",
-      " [ 40  40  30 120 250]\n",
-      " [ 30  20  30  80 250]]\n",
+      "[[ 20  80  90  40 250]\n",
+      " [ 20 100  60   0   0]\n",
+      " [ 20  20 150  80 100]]\n",
       "\n",
       "mat+mat is \n",
-      "[[ 2  2  4  2  8]\n",
-      " [ 8  4  2  6 10]\n",
-      " [ 6  2  2  4 10]]\n",
+      "[[ 4  8  6  2 10]\n",
+      " [ 4 10  4  0  0]\n",
+      " [ 4  2 10  4  4]]\n",
       "\n",
       "mat*mat is \n",
-      "[[ 1  1  4  1 16]\n",
-      " [16  4  1  9 25]\n",
-      " [ 9  1  1  4 25]]\n",
+      "[[ 4 16  9  1 25]\n",
+      " [ 4 25  4  0  0]\n",
+      " [ 4  1 25  4  4]]\n",
       "\n"
      ]
     }
@@ -760,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1026,6 +1061,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#01\n",
+    "array = np.zeros(10)\n",
+    "array[4] = 1\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 8, 1],\n",
+       "       [3, 8, 6],\n",
+       "       [0, 5, 1]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(low=0, high=9, size=(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1048,7 +1148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
